--- a/templates/postbox/newsfeed.html
+++ b/templates/postbox/newsfeed.html
@@ -4,10 +4,12 @@
   <title>Postbox</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="/postbox/static/css/bootstrap.min.css">
-  <script src="/postbox/static/js/jquery-2.2.4.min.js"></script>
-  <script src="/postbox/static/js/bootstrap.min.js"></script>
-    <style>
+    {% load staticfiles %}
+   {% load staticfiles %}
+   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+  <script src="{% static 'bootstrap/js/bootstrap.min.js'  %}"></script>
+  <style>
     /* Set black background color, white text and some padding */
     body{  position: relative;  }
     #section{padding-top:80px;}
