--- a/templates/postbox/Posts_list.html
+++ b/templates/postbox/Posts_list.html
@@ -29,8 +29,6 @@
     .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
     .sidebar-nav li a:active {  color:white;  background-color:orange;  }
     .sidebar-nav > .active { color:white;  background:darkorange; }
-    footer {  background-color: #555;  color: white;  padding: 15px;  }
-
   </style>
 
 </head>
@@ -47,16 +45,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <h4 style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://127.0.0.1:8000/postbox/{{full_name }}">NewsFeed</a></li>
-        <li class="active"><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
+        <li><a href="/postbox/">NewsFeed</a></li>
+        <li class="active"><a href="/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> My Account <span class="caret"></span></a>
          <ul class="dropdown-menu">
-              <li><a href="http://127.0.0.1:8000/accounts/logout/">Logout</a></li>
+              <li><a href="/accounts/logout/">Logout</a></li>
               <li><a href="#">Change Password</a></li>
             </ul></li>
           </ul>
@@ -67,23 +65,19 @@
 
 <div id="section" class="container text-center" >
 
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#side" >
-          <span class="glyphicon glyphicon-heart" style="color: hotpink"></span>
-      </button>
-
 
     <div id="side">
           <ul class="sidebar-nav" id="menu" style="list-style: none;">
-            <li><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></a></li>
-            <li><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></a></li>
+            <li><a href="/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></a></li>
+            <li><a href="/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></a></li>
             <li>&nbsp;</li>
             <li><b style="color: hotpink">CATEGORY LIST</b></li>
-           <li><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">All</a></li>
+           <li><a href="/postbox/{{ full_name }}/profile/">All</a></li>
            {% for i in categories %}
                {% if i.id == cat %}
-                    <li class="active"> <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.owner_id }}/{{i.id}}/" style="color: white">{{ i.category }}</a></li>
+                    <li class="active"> <a href="/postbox/{{ full_name}}/{{i.id}}/" style="color: white">{{ i.category }}</a></li>
                {% elif i.id != cat %}
-                    <li> <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.owner_id }}/{{i.id}}/"> {{ i.category }}</a></li>
+                    <li> <a href="/postbox/{{ full_name}}/{{i.id}}/"> {{ i.category }}</a></li>
                {% endif %}
                 {% empty %}
                         <li>Sorry, you hadn't created any categories</li>
@@ -95,8 +89,8 @@
 
           {% for i in categories %}{% if i.id == cat %}
                <p align="left" style="font-size: 20px;font-family:'Castellar';"><b> {{i.category}}</b>&nbsp;&nbsp;&nbsp;
-               <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/edit_cat/" data-toggle="tooltip" title="Edit this category name"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
-            <a data-toggle="tooltip" href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/delete_cat/"  title="Delete this category"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+               <a href="/postbox/{{ full_name}}/{{ i.id }}/edit_cat/" data-toggle="tooltip" title="Edit this category name"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+            <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ i.id }}/delete_cat/"  title="Delete this category"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
             <br><br></p>
           {% endif %} {% endfor %}
 
@@ -107,10 +101,10 @@
                  <p align="left">
                       {% load staticfiles %}
                       <img src="{% static "postbox/bird.jpg" %}" class="img-circle" height="55" width="55" alt="Avatar"/>
-                      <b>&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
-                      <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
-                      <a data-toggle="tooltip" href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
-                      <p align="right">&nbsp; <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b>{{ i.p_date }}</p>
+                      <b style="font-family: 'Copperplate Gothic Light';color:#2b669a">&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
+                      <a href="/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+                      <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+                      <p align="right" style="font-family: 'Copperplate Gothic Light';color:green">&nbsp; <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b>{{ i.p_date }}</p>
                  </p>
                    <hr>
                   <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
@@ -124,20 +118,14 @@
                        {% endfor %}
                   {% endif %}
                    <p align="left">{{i.status|safe}}</p><br>
-                    <a href="http://127.0.0.1:8000/postbox/{{ full_name }}/{{ i.owner_id }}/{{ i.cid_id }}/{{ i.id }}/comments/">Comments</a>
+                    <a href="/postbox/{{ full_name }}/{{ i.cid_id }}/{{ i.id }}/comments/">Comments</a>
 
                 </div></div></div>
                {% empty %}
                         <li>Sorry, you hadn't created any post yet in this category</li>
           {% endfor %}
-
      </div>
-
     </div>
-
-
-
-
 </body>
 </html>
 
