--- a/templates/postbox/newsfeed.html
+++ b/templates/postbox/newsfeed.html
@@ -9,24 +9,40 @@
    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js'  %}"></script>
+
+     <script>
+         $(document).ready(function()
+         {
+             $("#side").hide();
+             $("#menuclick").click(function(){
+                $("#side").show();
+                $("#posts2").fadeIn(0);
+                 $("#posts1").hide();
+         });
+
+              $("#posts2").click(function(){
+                   $("#side").hide();
+                   $("#posts1").show();
+                   $("#posts2").hide();
+         });
+         });
+     </script>
+
   <style>
     /* Set black background color, white text and some padding */
+     #posts2{opacity: 0.6; filter : alpha(opacity=60);display: none }
     body{  position: relative;  }
     #section{padding-top:80px;}
-     hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid lightgray;
-    margin: 1em 0;
-    padding: 0;
-}
+     hr {  display: block;  height: 1px;  border: 0;  border-top: 1px solid lightgray;  margin: 1em 0;  padding: 0;  }
+     #side{z-index:1000;position:fixed;left:0px; top:50px; width: 200px;  height:100%;  background: #000;  overflow-y: auto;  }
+    .sidebar-nav {  position: relative;  top: 0;  width: 200px;  margin: 0;  padding: 0;  list-style: none;  margin-top: 2px;  }
+    .sidebar-nav li {  text-indent: 15px;  line-height: 40px;  }
+    .sidebar-nav li a {  display: block;  text-decoration: none;  color: #999999;  }
+    .sidebar-nav li a:hover {  text-decoration: none;  color: #fff;  background: rgba(255,255,255,0.2);border-left: red 2px solid;}
+    .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
+    .sidebar-nav li a:active {  color:white;  background-color:orange;  }
+    .sidebar-nav > .active { color:white;  background:darkorange; }
 
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
   </style>
 </head>
 <body style="background-color: lightgrey">
@@ -41,16 +57,19 @@
         <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-        <h4 style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+
+        <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px"> &nbsp;&nbsp;&nbsp;<a id="menuclick"><span class="glyphicon glyphicon-th-large" aria-hidden="true" style="color: lightgray"></span> </a>
+            &nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
+
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="http://127.0.0.1:8000/postbox/{{full_name }}">NewsFeed</a></li>
-        <li><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
+        <li class="active"><a href="/postbox/">NewsFeed</a></li>
+        <li><a href="/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> My Account <span class="caret"></span></a>
          <ul class="dropdown-menu">
-              <li><a href="http://127.0.0.1:8000/accounts/logout/">Logout</a></li>
+              <li><a href="/accounts/logout/">Logout</a></li>
               <li><a href="#">Change Password</a></li>
             </ul></li>
           </ul>
@@ -59,27 +78,77 @@
       </div>
 </nav>
 
-<div id="section" class="container text-center">
+<div id="section" class="container text-center" >
 
-    <p style="font-family: Cambria;font-size: 20px"><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_post/"><u>Click here to Add a Post</u></a></p>
+    <div id="side">
+          <ul class="sidebar-nav" id="menu" style="list-style: none;">
+            <li><a href="/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></a></li>
+            <li><a href="/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></a></li>
+            <li>&nbsp;</li>
+            <li><b style="color: hotpink">CATEGORY LIST</b></li>
+           <li><a href="/postbox/{{ full_name }}/profile/" style="color: white">All</a></li>
+           {% for i in categories %}
+                    <li> <a href="/postbox/{{ full_name}}/{{i.id}}/"> {{ i.category }}</a></li>
+                {% empty %}
+                        <li>Sorry, you hadn't created any categories</li>
+            {% endfor %}
+          </ul>
+    </div>
 
-    {% for j,i in posts %}
+    <div id="posts1">
+
+          {% for j,i in post %}
             <div class="row">
 
-                 <div class="col-sm-16"><div class="well" style=";background:white;">
+                <div class="col-lg-16"><div class="well" style=";background:white;">
                  <p align="left">
                       {% load staticfiles %}
                       <img src="{% static "postbox/bird.jpg" %}" class="img-circle" height="55" width="55" alt="Avatar"/>
-                      <b>&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
+                      <b style="font-family: 'Copperplate Gothic Light';color:#2b669a">&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
                       {% if p == i.owner_id %}
-                      <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
-                      <a data-toggle="tooltip" href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
-                      {% endif %}
-                     <p align="right">&nbsp; <b>Category: </b>{{ i.cid }}&nbsp;&nbsp;&nbsp;&nbsp;<b>Created on:</b> {{ i.p_date }}</p>
-                 </p><hr>
+                      <a href="/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+                      <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+                       {% endif %}
+                      <p align="right" style="font-family: 'Copperplate Gothic Light';color:green">&nbsp; <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b>{{ i.p_date }}</p>
+                 </p>
+                   <hr>
+                  <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
+                  <br>
+                  {% if  i.image %}
+                      {% for l in img %}
+                        {% if  j ==  forloop.counter0 %}
+                           {% load staticfiles %}
+                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
+                        {% endif %}
+                       {% endfor %}
+                  {% endif %}
+                   <p align="left">{{i.status|safe}}</p><br>
+                    <a href="/postbox/{{ full_name }}/{{ i.id }}/comments/">Comments</a>
 
-                  <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
-                 <br>
+                </div></div></div>
+               {% empty %}
+                        <p>Sorry, no posts</p>
+          {% endfor %}
+
+     </div>
+
+     <div id="posts2">
+
+          {% for j,i in posts %}
+            <div class="row">
+
+                <div class="col-lg-16"><div class="well" style=";background:white;">
+                 <p align="left">
+                      {% load staticfiles %}
+                      <img src="{% static "postbox/bird.jpg" %}" class="img-circle" height="55" width="55" alt="Avatar"/>
+                      <b style="font-family: 'Copperplate Gothic Light';color:#2b669a">&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
+                      <a href="/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+                      <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+                      <p align="right" style="font-family: 'Copperplate Gothic Light';color:green">&nbsp; <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b>{{ i.p_date }}</p>
+                 </p>
+                   <hr>
+                  <p align="left" style="font-size:30px;font-family:'Copperplate Gothic Light';color: darkorange">{{ i.title }}</p><hr>
+                  <br>
                   {% if  i.image %}
                       {% for l in img %}
                         {% if  j ==  forloop.counter0 %}
@@ -88,21 +157,18 @@
                         {% endif %}
                        {% endfor %}
                   {% endif %}
-                  <p align="left">{{i.status|safe}}</p> <br>
-                    <a href="http://127.0.0.1:8000/postbox/{{ full_name }}/{{ i.owner_id }}/{{ i.id }}/comments/">Comments</a>
+                   <p align="left">{{i.status|safe}}</p><br>
+                    <a href="/postbox/{{ full_name }}/{{ i.id }}/comments/">Comments</a>
 
-                </div></div>
-
-             </div>
-         {% empty %}
-                        <li>Sorry, there are no posts</li>
+                </div></div></div>
+               {% empty %}
+                        <p>Sorry, no posts</p>
           {% endfor %}
 
-</div>
+     </div>
+    </div>
 
-{#<footer class="container-fluid text-center">#}
-{#  <p>Footer Text</p>#}
-{#</footer>#}
+
 
 </body>
 </html>
