--- a/templates/registration/invalid.html
+++ b/templates/registration/invalid.html
@@ -13,20 +13,7 @@
     /* Set black background color, white text and some padding */
     body{  position: relative;  }
     #section{padding-top:80px;}
-     hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid black;
-    margin: 1em 0;
-    padding: 0;
-}
 
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
   </style>
 </head>
 <body>
@@ -35,7 +22,7 @@
   <div class="container-fluid">
 
     <div class="navbar-header" align="center">
-        <h4 align="center" style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 align="center" style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
    </div>
 
       </div>
