--- a/templates/postbox/Categories_form.html
+++ b/templates/postbox/Categories_form.html
@@ -22,7 +22,6 @@
     .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
     .sidebar-nav li a:active {  color:white;  background-color:orange;  }
     .sidebar-nav > .active { color:white;  background:darkorange; }
-    footer {  background-color: #555;  color: white;  padding: 15px;  }
 
   </style>
 
@@ -40,13 +39,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <h4 style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://127.0.0.1:8000/postbox/{{full_name }}/">NewsFeed</a></li>
-        <li class="active"><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
+        <li><a href="/postbox/">NewsFeed</a></li>
+        <li class="active"><a href="/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> My Account <span class="caret"></span></a>
          <ul class="dropdown-menu">
               <li><a href="http://127.0.0.1:8000/accounts/logout/">Logout</a></li>
@@ -60,55 +59,48 @@
 
 <div id="section" class="container text-center">
 
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#side" >
-          <span class="glyphicon glyphicon-heart" style="color: hotpink"></span>
-      </button>
-
 
     <div id="side">
           <ul class="sidebar-nav" id="menu" style="list-style: none;">
-            <li class="active"><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_category/" style="color: white">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></></li>
-            <li><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></></li>
+            <li class="active"><a href="/postbox/{{ full_name}}/create_category/" style="color: white">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></></li>
+            <li><a href="/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></a></li>
             <li>&nbsp;</li>
             <li><b style="color: hotpink">CATEGORY LIST</b></li>
-           <li><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">All</a></li>
+           <li><a href="/postbox/{{ full_name }}/profile/">All</a></li>
            {% for i in categories %}
-               <li> <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.owner_id }}/{{i.id}}/"> {{ i.category }}</a></li>
+               <li> <a href="/postbox/{{ full_name}}/{{i.id}}/"> {{ i.category }}</a></li>
+               {% empty %}
+               <li>Sorry, you hadn't created any categories </li>
             {% endfor %}
           </ul>
     </div>
 
     <div id="posts1">
 
-    <h3> Create a New Category</h3>
+    <h3 style="font-family: 'Copperplate Gothic Light';color:#2b669a"> Create a New Category</h3><br><br>
 
     {% if message %}
     <p class="error">That category already exists</p>
 {% endif %}
 
-     <form id="category_form" method="post" action="">
+     <form  id="category_form" method="post" action="">
 
             {% csrf_token %}
             {% if mesg %}
     <p class="error"><p style="color: red"> Warning! </p> category already exists.Please enter a new one!</p>
 {% endif %}
-
+             {% load bootstrap %}
             {% for field in form.visible_fields %}
                 {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
+                {{ field|bootstrap}}
             {% endfor %}
 
-            <input type="submit" name="submit" value="Create Category" />
+              <button type="submit" value="Post" class = "btn btn-success">Add</button>
+
         </form>
 
    </div>
-
 </div>
-
-{#<footer class="container-fluid text-center">#}
-{#  <p>Footer Text</p>#}
-{#</footer>#}
 
 </body>
 </html>
