--- a/templates/postbox/Comments_list1.html
+++ b/templates/postbox/Comments_list1.html
@@ -9,27 +9,39 @@
   <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js'  %}"></script>
 
+    <script>
+         $(document).ready(function()
+         {
+             $("#side").hide();
+             $("#menuclick").click(function(){
+                $("#side").show();
+         });
+
+              $("#com").click(function(){
+                   $("#side").hide();
+
+         });
+         });
+     </script>
+
     <style>
     /* Set black background color, white text and some padding */
     body{  position: relative;  }
     #section{padding-top:80px;}
-     hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid lightgray;
-    margin: 1em 0;
-    padding: 0;
-}
+     hr { display: block;  height: 1px;  border: 0;  border-top: 1px solid lightgray;  margin: 1em 0;  padding: 0;  }
+         #side{z-index:1000;position:fixed;left:0; top:50px; width: 200px;  height:100%;  background: #000;  overflow-y: auto;  }
+    .sidebar-nav {  position: relative;  top: 0;  width: 200px;  margin: 0;  padding: 0;  list-style: none;  margin-top: 2px;  }
+    .sidebar-nav li {  text-indent: 15px;  line-height: 40px;  }
+    .sidebar-nav li a {  display: block;  text-decoration: none;  color: #999999;  }
+    .sidebar-nav li a:hover {  text-decoration: none;  color: #fff;  background: rgba(255,255,255,0.2);border-left: red 2px solid;}
+    .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
+    .sidebar-nav li a:active {  color:white;  background-color:orange;  }
+    .sidebar-nav > .active { color:white;  background:darkorange; }
 
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
+
   </style>
 </head>
-<body style="background-color: lightgrey">
+<body style="background-color:lightgrey">
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
@@ -41,16 +53,18 @@
         <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-        <h4 style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px"> &nbsp;&nbsp;&nbsp;<a id="menuclick"><span class="glyphicon glyphicon-th-large" aria-hidden="true" style="color: lightgray"></span> </a>
+            &nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
+
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="http://127.0.0.1:8000/postbox/{{full_name }}">NewsFeed</a></li>
-        <li><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
+        <li class="active"><a href="/postbox/">NewsFeed</a></li>
+        <li><a href="/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> My Account <span class="caret"></span></a>
          <ul class="dropdown-menu">
-              <li><a href="http://127.0.0.1:8000/accounts/logout/">Logout</a></li>
+              <li><a href="/accounts/logout/">Logout</a></li>
               <li><a href="#">Change Password</a></li>
             </ul></li>
           </ul>
@@ -61,6 +75,23 @@
 
 <div id="section" class="container text-center">
 
+    <div id="side">
+          <ul class="sidebar-nav" id="menu" style="list-style: none;">
+            <li><a href="/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></a></li>
+            <li><a href="/postbox/{{ full_name}}/create_post/">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></a></li>
+            <li>&nbsp;</li>
+            <li><b style="color: hotpink">CATEGORY LIST</b></li>
+           <li><a href="/postbox/{{ full_name }}/profile/" style="color: white">All</a></li>
+           {% for i in categories %}
+                    <li> <a href="/postbox/{{ full_name}}/{{i.id}}/"> {{ i.category }}</a></li>
+                {% empty %}
+                        <li>Sorry, you hadn't created any categories</li>
+            {% endfor %}
+          </ul>
+    </div>
+
+   <div id="com">
+
     {% for j,i in post %}
             <div class="row">
 
@@ -68,12 +99,12 @@
                  <p align="left">
                       {% load staticfiles %}
                       <img src="{% static "postbox/bird.jpg" %}" class="img-circle" height="55" width="55" alt="Avatar"/>
-                      <b>&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
-                      {% if p == i.owner_id %}
-                      <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
-                      <a data-toggle="tooltip" href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+                      <b style="font-family: 'Copperplate Gothic Light';color:#2b669a">&nbsp;&nbsp;&nbsp;{{ i.owner }}</b>&nbsp;&nbsp;&nbsp;
+                      {% if uid == i.owner_id %}
+                      <a href="/postbox/{{ full_name}}/{{ i.id }}/edit_post/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+                      <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ i.id }}/delete_post/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
                       {% endif %}
-                     <p align="right">&nbsp;  <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b> {{ i.p_date }}</p>
+                     <p align="right" style="font-family: 'Copperplate Gothic Light';color:green">&nbsp;  <b>Category: </b>{{ i.cid }}<b>&nbsp;&nbsp;&nbsp;&nbsp;Created on:</b> {{ i.p_date }}</p>
                  </p> <hr>
 
                   <p align="left" style="font-size: 30px;font-family: 'Copperplate Gothic Light';color:darkorange">{{ i.title }}</p><hr>
@@ -82,7 +113,7 @@
                       {% for l in img %}
                         {% if  j ==  forloop.counter0 %}
                            {% load staticfiles %}
-                            <img src="{% static l %}" class="img-square" height="500" width=100% alt="Avatar"/><br><br>
+                            <img src="{% static l %}" class="img-square" height="500" width=80% alt="Avatar"/><br><br>
                         {% endif %}
                        {% endfor %}
                   {% endif %}
@@ -93,17 +124,17 @@
                      <p align="left"><b>Comments</b></p> <hr>
                      {% for k in c %}
                          {% if k.id != cmid %}
-                     <p align="left">&nbsp;&nbsp;&nbsp;<b>{{ k.owner }}</b>&nbsp;&nbsp;&nbsp;
+                     <p align="left">&nbsp;&nbsp;&nbsp;<b style="font-family: 'Copperplate Gothic Light';color:#2b669a">{{ k.owner }}</b>&nbsp;&nbsp;&nbsp;
                       {% if uid == k.owner_id %}
-                       <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ k.pid_id }}/{{ k.id }}/edit_comment/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
-                           <a data-toggle="tooltip" href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ k.pid_id }}/{{ k.id }}/delete_comment/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
+                       <a href="/postbox/{{ full_name}}/{{ k.pid_id }}/{{ k.id }}/edit_comment/" data-toggle="tooltip" title="Edit this post"><span style="color: black" class="glyphicon glyphicon-pencil"></span></a>&nbsp;&nbsp;
+                           <a data-toggle="tooltip" href="/postbox/{{ full_name}}/{{ k.pid_id }}/{{ k.id }}/delete_comment/"  title="Delete"><span class="glyphicon glyphicon-trash" style="color: red"></span></a>
                       {% endif %}
                       &nbsp; Created on: {{ k.cm_date }}
                          </p>
                          <p align="left">{{ k.comment }}</p> <hr>
                          {% endif %}
                           {% empty %}
-                        <li>no comments</li>
+                        <p>no comments</p>
                          {% endfor %}
 
                         {% if mesg %}
@@ -112,22 +143,18 @@
 
                          <form align='left' id="comment_form" method="post" action="">
                           {% csrf_token %}
-                          {{ form.as_p }}
-                             <input type="submit" name="submit" value="Post" />
+                             {% load bootstrap %}
+                          {{ form|bootstrap }}
+                             <button  type="submit" value="Post" class = "btn btn-success">Add</button>
                           </form>
                  </div>
                  </div>
 
-
-
              </div>
           {% endfor %}
+   </div>
 
 </div>
-
-{#<footer class="container-fluid text-center">#}
-{#  <p>Footer Text</p>#}
-{#</footer>#}
 
 </body>
 </html>
