--- a/templates/postbox/Posts_form.html
+++ b/templates/postbox/Posts_form.html
@@ -16,7 +16,7 @@
     /* Set black background color, white text and some padding */
     #section{position:absolute;padding-top:80px;}
     #posts1{padding-left:230px;padding-top:10px;width:100% }
-    #side{  z-index: 1000;  position:fixed;left:0px; top:50px; width: 200px;  height:100%;  background: #000;  overflow-y: auto;  }
+    #side{  z-index: 1000;  position:fixed;left:0; top:50px; width: 200px;  height:100%;  background: #000;  overflow-y: auto;  }
     .sidebar-nav {  position: relative;  top: 0;  width: 200px;  margin: 0;  padding: 0;  list-style: none;  margin-top: 2px;  }
     .sidebar-nav li {  text-indent: 15px;  line-height: 40px;  }
     .sidebar-nav li a {  display: block;  text-decoration: none;  color: #999999;  }
@@ -24,7 +24,6 @@
     .sidebar-nav>li>a:focus {  color:white;  background-color:orange;  }
     .sidebar-nav li a:active {  color:white;  background-color:orange;  }
     .sidebar-nav > .active { color:white;  background:darkorange; }
-    footer {  background-color: #555;  color: white;  padding: 15px;  }
 
   </style>
 
@@ -42,13 +41,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <h4 style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+         <h4 style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp;</h4>
    </div>
 
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://127.0.0.1:8000/postbox/{{full_name }}">NewsFeed</a></li>
-        <li class="active"><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
+        <li><a href="/postbox/">NewsFeed</a></li>
+        <li class="active"><a href="/postbox/{{ full_name }}/profile/">{{full_name}}'s Profile</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> My Account <span class="caret"></span></a>
          <ul class="dropdown-menu">
               <li><a href="http://127.0.0.1:8000/accounts/logout/">Logout</a></li>
@@ -62,50 +61,44 @@
 
 <div id="section" class="container text-center">
 
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#side" >
-          <span class="glyphicon glyphicon-heart" style="color: hotpink"></span>
-      </button>
-
-
     <div id="side">
           <ul class="sidebar-nav" id="menu" style="list-style: none;">
-            <li ><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></></li>
-            <li class="active"><a href="http://127.0.0.1:8000/postbox/{{ full_name}}/create_post/" style="color: white">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></></li>
+            <li ><a href="/postbox/{{ full_name}}/create_category/">Add a Category<span class="glyphicon glyphicon-plus" style="color: deepskyblue"></span></a></li>
+            <li class="active"><a href="/postbox/{{ full_name}}/create_post/" style="color: white">Add a Post<span class="glyphicon glyphicon-plus" style="color: yellow"></span></></li>
             <li>&nbsp;</li>
             <li><b style="color: hotpink">CATEGORY LIST</b></li>
-           <li><a href="http://127.0.0.1:8000/postbox/{{ full_name }}/profile/">All</a></li>
+           <li><a href="/postbox/{{ full_name }}/profile/">All</a></li>
            {% for i in categories %}
-               <li> <a href="http://127.0.0.1:8000/postbox/{{ full_name}}/{{ i.owner_id }}/{{i.id}}/"> {{ i.category }}</a></li>
+               <li> <a href="/postbox/{{ full_name}}/{{i.id}}/"> {{ i.category }}</a></li>
+               {% empty %}
+                 <li>Sorry, you hadn't created any categories</li>
             {% endfor %}
           </ul>
     </div>
 
     <div id="posts1">
 
-    <h3 align="left">Create a New Post</h3>
+    <h3 align="left" style="font-family: 'Copperplate Gothic Light';color:#2b669a">Create a New Post</h3>
 
     {% if mesg %}
     <p class="error">{{ mesg }}</p>
 {% endif %}
 
-     <form align='left' id="category_form" method="post" action="" enctype="multipart/form-data">
+      {% load bootstrap %}
+     <form  id="category_form" method="post" action="" enctype="multipart/form-data">
 
             {% csrf_token %}
-            <p><b>Title: </b>{{ form.title }}</p>
-            <p><b>Status: </b>{{ form.status}}</p>
-            <p><b>Category: </b>{{ form.cid }}</p>
-            <p><b>Image: </b><br>{{ form.image }}</p>
+            <p align="left">{{ form.cid.errors}}{{ form.cid|bootstrap}}</p>
+            <p align="left">{{ form.title.errors}}{{ form.title|bootstrap }}</p>
+            <p align="left">{{ form.status.errors}}{{ form.status|bootstrap}}</p>
+            <p align="left">{{ form.image.errors}}{{ form.image|bootstrap }}</p>
          <br>
-            <input type="submit" name="submit" value="Post" />
+              <button   type="submit" value="Post" class = "btn btn-success">Post</button>
+
         </form>
 
    </div>
 </div>
-
-
-{#<footer class="container-fluid text-center">#}
-{#  <p>Footer Text</p>#}
-{#</footer>#}
 
 </body>
 </html>
