--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,20 +14,7 @@
     /* Set black background color, white text and some padding */
     body{  position: relative;  }
     #section{padding-top:80px;}
-     hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid black;
-    margin: 1em 0;
-    padding: 0;
-}
 
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
   </style>
 </head>
 <body>
@@ -36,7 +23,7 @@
   <div class="container-fluid">
 
     <div class="navbar-header" align="center">
-        <h4 align="center" style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 align="center" style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp; </h4>
    </div>
 
       </div>
@@ -51,7 +38,7 @@
               <p class="error">Sorry, that's not a valid username or password</p>
             {% endif %}
 
- <p align="center"> <button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button></p>
+ <p align="center"> <form action="accounts/login/"><button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button> </form></p>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
