--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -13,20 +13,6 @@
     /* Set black background color, white text and some padding */
     body{  position: relative;  }
     #section{padding-top:80px;}
-     hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid black;
-    margin: 1em 0;
-    padding: 0;
-}
-
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
   </style>
 </head>
 <body>
@@ -35,7 +21,7 @@
   <div class="container-fluid">
 
     <div class="navbar-header" align="center">
-        <h4 align="center" style="font-family:'Bernard MT Condensed';color:orange;font-size:25px">POSTBOX &nbsp;&nbsp;&nbsp; </h4>
+        <h4 align="center" style="font-family:'Copperplate Gothic Light';color:orange;font-size:25px">&nbsp;&nbsp;&nbsp;POSTBOX &nbsp;&nbsp;&nbsp; </h4>
    </div>
 
       </div>
@@ -63,20 +49,20 @@
 
         <div class="modal-header" style="padding:35px 50px;">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4><span class="glyphicon glyphicon-lock"></span>Register</h4>
+          <h4 style="color:orangered">Register</h4>
         </div>
 
         <div class="modal-body" style="padding:40px 50px;">
 
             <form action="/accounts/register/" method="post" role="form"> {%  csrf_token %}
               <div class="form-group">
-                <ul style="list-style: none" >
+                <p style="list-style: none" >
+                {% load bootstrap %}
                     {% for field in form %}
-                <li>{{ field.errors }}
-                <b>{{ field.name }}</b>
-                {{ field }}<br>
-                {{ field.help_text }}</li>
-                {% endfor %}</ul>
+                {{ field.errors }}
+                {{ field|bootstrap }}<br>
+
+                {% endfor %}</p>
 
                   </div>
               <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span>Register</button>
